@@ -24,6 +24,7 @@ NEW: [features/improvements]
 +Add support for XText (patch from Igor Dejanovic).
 +Support XText in Codebrowser (patch from Igor Dejanovic).
 +Complete re-write of vi emulation support (patch from Hasan Aljudy)
++Add option to start in Normal mode by default when using vi emulation (patch from Hasan Aljudy).
 
 BUG FIXES:
 +Fix python autocomp from failing when word was next to a boundry character.
